deployment/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modelscope-runtime
  labels:
    app.kubernetes.io/part-of: modelscope-net
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
